# UAV-Indoor-TeTa-Framework

./: README.md
autonomous_flight/cfg/dynamic_exploration/: camera_param.yaml  flight_base.yaml
autonomous_flight/include/autonomous_flight/simulation/: dynamicExploration.cpp
autonomous_flight/launch/: dynamic_exploration.launch
onboard_detector/: CMakeLists.txt  package.xml
rosbag_analysis/scripts/: coverage.py  exploration_time.py  flight_distance.py  plot_roadmap.py  plot_trajectory.py
uav_simulator/launch/: start.launch
uav_simulator/src/: f_node.py  simple_takeoff_node.py
