<?xml version="1.0"?>
<package format="2">
  <name>onboard_detector</name>
  <version>1.0.0</version>
  <description>The onboard detector package for dynamic object detection.</description>
  <maintainer email="zhefanx@andrew.cmu.edu">Zhefan Xu</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- KOREKSI PENTING: Tambahkan semua dependensi dari CMakeLists.txt -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend> <!-- Ditambahkan dari CMakeLists -->
  <build_depend>geometry_msgs</build_depend> <!-- Ditambahkan dari CMakeLists -->
  <build_depend>nav_msgs</build_depend> <!-- Ditambahkan dari CMakeLists -->
  <build_depend>tf</build_depend> <!-- Ditambahkan dari CMakeLists -->
  <build_depend>eigen_conversions</build_depend> <!-- Ditambahkan dari CMakeLists -->
  <build_depend>pcl_ros</build_depend> <!-- Ditambahkan dari CMakeLists -->
  <build_depend>pcl_conversions</build_depend> <!-- Ditambahkan dari CMakeLists -->
  <build_depend>libeigen3-dev</build_depend> <!-- System dependency for Eigen -->
  <build_depend>libpcl-dev</build_depend> <!-- System dependency for PCL -->


  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>vision_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>libeigen3-dev</build_export_depend>
  <build_export_depend>libpcl-dev</build_export_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>libeigen3-dev</exec_depend>
  <exec_depend>libpcl-dev</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>